--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -1,11 +1,16 @@
 ---
-title: "Talk 1 on Relevant Topic in Your Field"
+title: "Talk on algorithmic differentiation of QR factorization"
 collection: talks
 type: "Talk"
-permalink: /talks/2012-03-01-talk-1
-venue: "UC San Francisco, Department of Testing"
-date: 2012-03-01
-location: "San Francisco, California"
+permalink: /talks/2024-09-17-talk
+venue: "University of Illinois, Chicago"
+date: 2024-09-17
+location: "Chicago, Illinois"
 ---
 
-This is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!
+This is a talk at the Algorithmic Differentiation 2024 conference.
+
+I speak about extending the QR factorization gradient for backprop to the wide
+case, software implementations and more.
+
+ 
