add links to slides and eqn sheet

--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -13,4 +13,10 @@ This is a talk at the Algorithmic Differentiation 2024 conference.
 I speak about extending the QR factorization gradient for backprop to the wide
 case, software implementations and more.
 
- 
+slides
+
+https://rlucas7.github.io/talks/algodiff_2024_slides.pdf
+
+equation handout sheet
+
+https://rlucas7.github.io/talks/algodiff_2024_eqns_handout.pdf
