maybe fix hrefs for qr talk

--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -13,10 +13,8 @@ This is a talk at the Algorithmic Differentiation 2024 conference.
 I speak about extending the QR factorization gradient for backprop to the wide
 case, software implementations and more.
 
-slides
+[Slides](https://rlucas7.github.io/talks/algodiff_2024_slides.pdf)
 
-https://rlucas7.github.io/talks/algodiff_2024_slides.pdf
+[Equation handout sheet](https://rlucas7.github.io/talks/algodiff_2024_eqns_handout.pdf)
 
-equation handout sheet
-
-https://rlucas7.github.io/talks/algodiff_2024_eqns_handout.pdf
+TODO: make a better summary writeup here...
