minor edits to post

--- a/_posts/2024-10-14-blog-post.md
+++ b/_posts/2024-10-14-blog-post.md
@@ -1,7 +1,7 @@
 ---
 title: 'On subsets and order'
-date: 2012-08-14
-permalink: /posts/2012/08/blog-post-1/
+date: 2024-10-14
+permalink: /posts/2024/10/blog-post-1/
 tags:
   - coding
   - combinatorics
@@ -42,6 +42,7 @@ Now if we arrange these numbers as a list for a given number of distinct items
 starting with 2 and moving to 3 we see that we have
 
 n=2 -> [0,1,1]
+
 n=3 -> [0,1,3,1]
 
 many ways where the ith entry in the nth list tells us how many ways to make
@@ -59,7 +60,7 @@ book as [Stirling numbers of the second kind](https://en.wikipedia.org/wiki/Stir
 Two interesting things, the first is that there is no commonly agreed upon
 notation for these numbers. I follow GKP and use the bracket/brace notation,
 
-${n \brace k} = k{n-1 \brace k} + {n-1 \brace k-1}$,
+$${n \brace k} = k{n-1 \brace k} + {n-1 \brace k-1}$$,
 
 for n>0 and k>0. The above equation also codifies the recursion relation for
 these numbers. Now you can use this to compute any value you like in a computer
@@ -77,7 +78,9 @@ called traversing fro the back in some circles.
 The steps are:
 
 (0) append a new entry to the list of integers at the end
+
 (1) multiply that value by the index in place
+
 (2) add the previous index value to the current indexed value
 
 stop after index 1, assuming your list is 0-indexed.
@@ -88,37 +91,37 @@ in the list becomes a large integer fairly quickly so this adds up for large n.
 The above logic is how I implemented the [stirling2](https://docs.scipy.org/doc/scipy/reference/generated/scipy.special.stirling2.html) function is SciPy for the
 `exact=True` branch.
 
-The $k$ value in the recursion formula above tells us that we need to multiply
-in place on index $k$ before adding the value from $k-1$. This means we must
+The $$k$$ value in the recursion formula above tells us that we need to multiply
+in place on index $$k$$ before adding the value from $$k-1$$. This means we must
 traverse from the back.
 
 There is a related set of numbers which are a variant of these numbers, those
-don't really have a name so I'll call them ordered Bell numbers of order $k$.
+don't really have a name so I'll call them ordered Bell numbers of order $$k$$.
 You'll see why in just a moment.
 
 The ordered bell numbers are given by the formula:
 
-$b(n) = \sum_{k=1}^n k!{n \brace k}$.
+$$b(n) = \sum_{k=1}^n k!{n \brace k}$$.
 
-Now I'm referring to the $k$ component of this sum which is
-$k!{n \brace k}$.
+Now I'm referring to the $$k$$ component of this sum which is
+$$k!{n \brace k}$$.
 
 To calculate these the recursion is easily seen as
 
-${n \brace k} = k{n-1 \brace k} + k{n-1 \brace k-1}$.
+$${n \brace k} = k{n-1 \brace k} + k{n-1 \brace k-1}$$.
 
-In other words we're multiplying both items by $k$.
+In other words we're multiplying both items by $$k$$.
 We can interpret this as each non-empty subset being distinguished in some way,
 e.g. by different colors. This means 1 and then 2 as two non-empty subsets is
 distinct from 2 and then 1 as two non-empty subsets.
 
-Another way to interpret is as the number of ties in a ranking of $n$ elements
-where we have $k$ distinct sets ranked. If there are no ties in a set then the
+Another way to interpret is as the number of ties in a ranking of $$n$$ elements
+where we have $$k$$ distinct sets ranked. If there are no ties in a set then the
 set is a singleton.
 
-Now because the value $k$ appears on both the recursion can go from either side
+Now because the value $$k$$ appears on both the recursion can go from either side
 e.g. you can traverse from the front, e.g. the usual way i=0, i=1, etc. and then
-divide by $i!$ if you really want but you would in either case need to be concerned
+divide by $$i!$$ if you really want but you would in either case need to be concerned
 about numeric precision given how large the numbers become so quickly (in n).
 
 Note that for the ordered Bell numbers of order $k$, you can still do the computation
