--- a/_posts/2024-10-14-blog-post.md
+++ b/_posts/2024-10-14-blog-post.md
@@ -62,14 +62,14 @@ notation for these numbers. I follow GKP and use the bracket/brace notation,
 
 $${n \brace k} = k{n-1 \brace k} + {n-1 \brace k-1}$$,
 
-for n>0 and k>0. The above equation also codifies the recursion relation for
+for n>=k>0 and k>0. The above equation also codifies the recursion relation for
 these numbers. Now you can use this to compute any value you like in a computer
 via what is called a [dynamic programm](https://en.wikipedia.org/wiki/Dynamic_programming)
 or DP.
 
 Now this is all well known, but one thing that is less well known is that you
 can do the DP in-place instead of using 2 adjacent rows of integers in separate
-memory locations, one storing the values for $n-1$ and the other for $n$ that
+memory locations, one storing the values for $$n-1$$ and the other for $n$ that
 is being populated in the current iteration.
 
 To do this in place you need to traverse the row of integers right to left, also
@@ -101,14 +101,14 @@ You'll see why in just a moment.
 
 The ordered bell numbers are given by the formula:
 
-$$b(n) = \sum_{k=1}^n k!{n \brace k}$$.
+$$b(n) = \sum_{k=1}^n b(n,k) = \sum_{i=1}^n k!{n \brace k}$$.
 
 Now I'm referring to the $$k$$ component of this sum which is
 $$k!{n \brace k}$$.
 
 To calculate these the recursion is easily seen as
 
-$${n \brace k} = k{n-1 \brace k} + k{n-1 \brace k-1}$$.
+$$b(n,k) = k{n-1 \brace k} + k{n-1 \brace k-1}$$.
 
 In other words we're multiplying both items by $$k$$.
 We can interpret this as each non-empty subset being distinguished in some way,
@@ -124,7 +124,7 @@ e.g. you can traverse from the front, e.g. the usual way i=0, i=1, etc. and then
 divide by $$i!$$ if you really want but you would in either case need to be concerned
 about numeric precision given how large the numbers become so quickly (in n).
 
-Note that for the ordered Bell numbers of order $k$, you can still do the computation
+Note that for the ordered Bell numbers of order $$k$$, you can still do the computation
 in place similar to how you did the Stirling numbers of the second kind. The
 primary difference beside what the numbers actually count is that for
 ordered Bell numbers of order $k$ you can iterate over a row in either direction
