add wiki link ordered Bell numbers

--- a/_posts/2024-10-14-blog-post.md
+++ b/_posts/2024-10-14-blog-post.md
@@ -99,7 +99,8 @@ There is a related set of numbers which are a variant of these numbers, those
 don't really have a name so I'll call them ordered Bell numbers of order $$k$$.
 You'll see why in just a moment.
 
-The ordered bell numbers are given by the formula:
+The [ordered bell numbers](https://en.wikipedia.org/wiki/Ordered_Bell_number)
+ are given by the formula:
 
 $$b(n) = \sum_{k=1}^n b(n,k) = \sum_{i=1}^n k!{n \brace k}$$.
 
