add screenshots by fixing filepath reolution

--- a/_posts/2024-10-14-blog-post.md
+++ b/_posts/2024-10-14-blog-post.md
@@ -196,3 +196,16 @@ schedule the computation for the individual cells of the matrices. There isn't
 a better way to do this that I'm aware of and still be exact.
 
 For the approximate branch-the default-the code is using the [Lambert W function](https://en.wikipedia.org/wiki/Lambert_W_function) and uses the second order approximation from [Temme](https://ir.cwi.nl/pub/5461) see section 4 of the linked paper for details.
+
+### Cite this post
+
+```
+@misc{LucasRoberts2024subsetsandordering,
+  author = {Lucas Roberts},
+  title = {On subsets and ordering},
+  year = 2024,
+  howpublished = {\url{https://rlucas7.github.io/posts/2024/10/blog-post-1/}},
+  note = {Accessed: 2024-10-15}
+}
+```
+
